# sacred-fractal

./: CMakeLists.txt  README.md
cmake/: FindFFTW.cmake  FindOSG.cmake.bck  FindOSG.cmake.test  FindOpenVR.cmake
docs/: Doxyfile  archi.dia
src/: main.cpp
src/graphics/: Program.cpp  Program.h
src/graphics/callback/: UniformMatrixProjectionCallback.h  UniformMatrixViewCallback.h  UniformResolutionCallback.h  UniformStereoCallback.h  UniformTimeCallback.h
src/graphics/shape/: Sphere.cpp  Sphere.h
src/gui/: Editor.cpp  Editor.h
src/gui/addons/: imgui_user.h
src/gui/addons/imguihelper/: imguihelper.cpp
src/gui/addons/imguinodegrapheditor/: imguinodegrapheditor.cpp  imguinodegrapheditor.h
src/gui/addons/imguitabwindow/: imguitabwindow.cpp
src/gui/imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_user.h
src/gui/nodes/: BinaryOperator.h  GeneratorNode.h  NodeType.h  RenderNode.h  UnaryOperator.h
src/gui/warpper/: ImGuiCallback.h  ImGuiDrawer.cpp  ImGuiDrawer.h  ImGuiHandler.cpp  ImGuiHandler.h
src/openvr/: Group.cpp  Group.h  Viewer.cpp  Viewer.h
src/openvr/callback/: PostDraw.cpp  PostDraw.h  PreDraw.cpp  PreDraw.h  Swap.cpp  Swap.h  UpdateSlave.cpp  UpdateSlave.h
src/openvr/device/: Device.cpp  Device.h  EventHandler.cpp  EventHandler.h  Texture.cpp  Texture.h
src/sounds/: FrameProcessing.h  SampleFrame.h  SignalSource.cpp  SignalSource.h
src/sounds/extractors/: Arpegiator.cpp  Arpegiator.h  Dissonance.cpp  Dissonance.h  Dynamics.cpp  Dynamics.h  Energy.cpp  Energy.h  YinPitch.cpp  YinPitch.h  ZCR.cpp  ZCR.h
src/sounds/filters/: BiQuad.cpp  BiQuad.h
src/sounds/generator/: BounceGenerator.cpp  BounceGenerator.h  Generator.cpp  Generator.h  SawGenerator.cpp  SawGenerator.h  SineGenerator.cpp  SineGenerator.h  SquareGenerator.cpp  SquareGenerator.h  TriangleGenerator.cpp  TriangleGenerator.h
src/sounds/openAL/: AudioDeviceManager.cpp  AudioDeviceManager.h  AudioLoader.cpp  AudioLoader.h  AudioPlayer.cpp  AudioPlayer.h
src/sounds/operators/: Inverser.cpp  Inverser.h  Mono.cpp  Mono.h  SignalsAdditioner.cpp  SignalsAdditioner.h  SignalsMultiplier.cpp  SignalsMultiplier.h  SignalsSubstractor.cpp  SignalsSubstractor.h
src/sounds/tools/: Peak.h  PeakDetection.cpp  PeakDetection.h
src/sounds/track/: Track.cpp  Track.h
src/sounds/transform/: Spectrum.cpp  Spectrum.h
src/sounds/window/: BarlettWindow.h  BlackmanWindow.h  FlattopWindow.h  GaussianWindow.h  HammingWindow.h  HannWindow.h  RectangularWindow.h  Window.h
src/test/: arpegiator_test.cpp  dissonance_test.cpp  dynamics_test.cpp  openal_test.cpp  spectrum_test.cpp  track_test.cpp
src/test/common/: json.hpp  print.h
src/test/generator/: bouncegen_test.cpp  sawgen_test.cpp  sinegen_test.cpp  squaregen_test.cpp  trianglegen_test.cpp
src/test/operator/: additioner_test.cpp  multiplier_test.cpp  substractor_test.cpp
test/: render_test.html  update_js_test.sh
